--- a/views/atividades2.ejs
+++ b/views/atividades2.ejs
@@ -75,7 +75,6 @@
                                     <div class="card-header bg-dark text-light">Data: <%=dados[n].data.getDate()+1%>/<%=dados[n].data.getMonth()+1%>/<%=dados[n].data.getFullYear()%></div>
                                     <div class="card-body">
                                         <div class="card-title">Tipo: <%=dados[n].tipo%></div>
-                                        <div class="card-title">Disciplina: <%=dados[n].disciplina%></div>
                                         <div class="card-subtitle">Entrega: <%=dados[n].entrega%></div>
                                         <!-- <div class="card-text">Matéria: <%=dados[n].tipo2%></div> -->
                                         <div class="card-text">Orientações: <%=dados[n].instrucoes%></div>
@@ -105,7 +104,6 @@
                                     <div class="card-header bg-dark text-light">Data: <%=dadose[n].data.getDate()+1%>/<%=dadose[n].data.getMonth()+1%>/<%=dadose[n].data.getFullYear()%></div>
                                     <div class="card-body">
                                         <div class="card-title">Tipo: <%=dadose[n].tipo%></div>
-                                        <div class="card-title">Disciplina: <%=dadose[n].disciplina%></div>
                                         <div class="card-subtitle">Entrega: <%=dadose[n].entrega%></div>
                                         <!-- <div class="card-text">Matéria: <%=dadose[n].tipo2%></div> -->
                                         <div class="card-text">Orientações: <%=dadose[n].instrucoes%></div>
@@ -134,8 +132,8 @@
                                     <div class="card-header bg-dark text-light">Data: <%=dadosx[n].data.getDate()+1%>/<%=dadosx[n].data.getMonth()+1%>/<%=dadosx[n].data.getFullYear()%></div>
                                     <div class="card-body">
                                         <div class="card-title">Tipo: <%=dadosx[n].tipo%></div>
-                                        <div class="card-title">Disciplina: <%=dadosx[n].disciplina%></div>
                                         <div class="card-subtitle">Entrega: <%=dadosx[n].entrega%></div>
+                                        <!-- <div class="card-text">Matéria: <%=dadosx[n].tipo2%></div> -->
                                         <div class="card-text">Orientações: <%=dadosx[n].instrucoes%></div>
                                     </div>
                                     <div class="card-footer">
