--- a/assets/css/estilos.css
+++ b/assets/css/estilos.css
@@ -2,12 +2,13 @@
     width: 125px;
     margin-bottom: 10px;
 }
-
-textarea {
+textarea{
     resize: none;
 }
+
 .logoff{
-    position: fixed;
-    right: auto;
+    position:fixed;
+    right: 0;
     z-index: 9;
+    margin-top: 20px;
 }
