--- a/views/registro.ejs
+++ b/views/registro.ejs
@@ -6,8 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lista de Atividades</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="/css/estilos.css">
-
+    <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
     <div class="container">
@@ -15,18 +14,16 @@
         <h3 class="text-center">Registro</h3>
         <div class="row">
             <div class="col text-center">
-                <form action="" method="post">
-                    <input type="text" name="nome" id="" class="form-control" placeholder="Nome">
+                <form action="" method="post" class="form-control">
+                    <input type="text" name="nome" id="" class = 'form-control' placeholder="Nome">
                     <input type="email" name="email" id="" class="form-control" placeholder="Email">
                     <input type="password" name="senha" id="senha" class="form-control" placeholder="Senha">
                     <input type="password" name="senha2" id="senha2" class="form-control" placeholder="Redigite a senha">
-                    <input type="submit" value="Registro" class="btn btn-info">
-
+                    <input type="submit" value="Registro" class="btn btn-outline-success">
                 </form>
-                <a href="/login" class="btn btn-info botao">Login</a>
+                <a href="/login" class="btn btn-outline-warning botao">Login</a>
             </div>
         </div>
-
     </div>
     <script src="js/comparar.js"></script>
 </body>
